# shift-manager-authenticator

./: accounts.example.json  pyproject.toml
src/: auth_server.py  config.py  connections.py  http_clients.py  main.py  parsers.py
src/models/: __init__.py  account_login_form_data.py  accounts.py  connect_authorize_form_data.py  http_clients.py  sign_in_oidc_form_data.py  units.py
