[tool.poetry]
name = "goretsky-integration-shift-manager-auth"
version = "1.0.0"
description = ""
authors = ["Eldos <eldos.baktybekov@gmail.com>"]
readme = "README.md"
packages = [{include = "goretsky_integration_shift_manager_auth"}]

[tool.poetry.dependencies]
python = "^3.11"
httpx = "^0.26.0"
bs4 = "^0.0.2"
lxml = "^5.1.0"
pydantic = "^2.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
